--- a/sign.html
+++ b/sign.html
@@ -189,7 +189,7 @@
                 <!-- <span class="new-user-text" id="new-user-text">New user?</span>
                 <span class="sign-up-link">Sign up</span> -->
                 <a href="#" class="new-user-text" id="new-user-text">New user?</a>
-                <a href="#" class="new-user-text" id="new-user-text">Sign up</a>
+                <a href="#" class="new-user-text" id="new-user-text">Login</a>
             </div>
         </form>
     </div>
