i fix the home page logo

--- a/homepg.html
+++ b/homepg.html
@@ -12,7 +12,8 @@
   <nav class="navbar">
     <div class="container">
       <div class="logo-container">
-        <img src="" alt="HARVEST HUB" class="logo">
+        <img src="Logo1.jpg" alt="HARVEST HUB" class="logo_img">
+        <div class="harv"><h1>HARVEST HUB</h1></div>
     <!-- just fix the logo only !! -->
     </div>
       <ul class="nav-menu">
