--- a/frontEnd/homepg.html
+++ b/frontEnd/homepg.html
@@ -17,12 +17,12 @@
     <!-- just fix the logo only !! -->
     </div>
       <ul class="nav-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Farmers</a></li>
-        <li><a href="#">Consumers</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="homepg.html">Home</a></li>
+        <li><a href="Aboutus.html">About Us</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="farmer.html">Farmers</a></li>
+        <li><a href="Wholesaler.html">Wholesaler</a></li>
+        <li><a href="cont.html">Contact Us</a></li>
       </ul>
     </div>
   </nav>
