--- a/frontEnd/sign.html
+++ b/frontEnd/sign.html
@@ -172,8 +172,8 @@
             <div class="select-box">
                 <select id="user-type" name="user-type" required>
                     <option value="">Select User Type</option>
-                    <option value="Consumer">Consumer</option>
                     <option value="Wholesaler">Wholesaler</option>
+                    <option value="Farmer">Farmer</option>
                 </select>
             </div>
             <div class="user-box">
