--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -15,8 +15,8 @@
             <div class="select-box">
                 <select id="user-type" name="user-type" required>
                     <option value="">Select User Type</option>
-                    <option value="student">Consumer</option>
-                    <option value="teacher">Wholesaler</option>
+                    <option value="student">Wholesaler</option>
+                    <option value="teacher">Faermer</option>
                 </select>
             </div>
             <div class="user-box">
