very big changes in every file

--- a/frontEnd/Aboutus.html
+++ b/frontEnd/Aboutus.html
@@ -12,15 +12,15 @@
 <nav class="navbar">
     <div class="container">
       <div class="logo-container">
-        <img src="logo1.jpg" alt="Harvest Hub Logo" class="logo">
-        
+        <img src="Logo1.jpg" alt="Logo" class="logo">
+        <div class="harv"><h1>HARVEST HUB</h1></div>
       </div>
       <ul class="nav-menu">
         <li><a href="homepg.html">Home</a></li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="farmer.html">Farmers</a></li>
-        <li><a href="Wholesaler.html">wholeselar</a></li>
+        <li><a href="Wholesaler.html">Wholesalers</a></li>
         <li><a href="Cont.html">Contact Us</a></li>
       </ul>
     </div>
@@ -30,10 +30,11 @@
     <!-- About Us Section -->
     <section class="about">
       <div class="container">
-        <h1>About Us</h1>
+        <h1>&lt;About Us/&gt;</h1>
 
         <h2>Welcome to Harvest Hub!</h2>
-
+        <br>
+        <div>
         <p>
           At Harvest Hub, we are passionate about connecting farmers directly to
           consumers, ensuring that you receive the freshest and highest quality
@@ -59,6 +60,7 @@
           Join us in our mission to build a healthier and more sustainable food
           system for all.
         </p>
+      </div>
       </div>
     </section>
 
