--- a/frontEnd/Cont.html
+++ b/frontEnd/Cont.html
@@ -13,6 +13,7 @@
     <div class="container">
       <div class="logo-container">
         <img src="logo1.jpg" alt="Harvest Hub " class="logo">
+        <div class="harv"><h1>HARVEST HUB</h1></div>
       </div>
       <ul class="nav-menu">
         <li><a href="homepg.html">Home</a></li>
@@ -28,19 +29,19 @@
   <!-- Contact Us Section -->
   <section class="contact">
     <div class="container">
-      <h1>Contact Us</h1>
+      <h1>&lt;Contact Us/&gt;</h1>
       
     
-       <p>If you have any questions or inquiries, feel free to get in touch with us using the form below:</p>
+       <h3>If you have any questions or inquiries, feel free to get in touch with us using the form below:</h3>
       <form action="#" method="POST">
         <label for="name">Your Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" placeholder="Enter your username" name="name" required>
 
-        <label for="email">Your Email:</label>
-        <input type="email" id="email" name="email" required>
+        <label for="email" >Your Email:</label>
+        <input type="email" id="email" placeholder="Enter your Email" name="email" required>
 
-        <label for="message">Your Message:</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
+        <label for="message" >Your Message:</label>
+        <textarea id="message" name="message" placeholder="Write you message here" rows="4" required></textarea>
 
         <button type="submit">Send Message</button>
       </form>
