--- a/frontEnd/Wholesaler.html
+++ b/frontEnd/Wholesaler.html
@@ -13,6 +13,7 @@
     <div class="container">
       <div class="logo-container">
         <img src="logo1.jpg" alt="Harvest Hub" class="logo">
+        <div class="harv"><h1>HARVEST HUB</h1></div>
       </div>
       <ul class="nav-menu">
         <li><a href="homepg.html">Home</a></li>
@@ -28,16 +29,30 @@
   <!-- Wholesalers Section -->
   <section class="Wholesaler">
     <div class="container">
-      <h1>Wholesalers</h1>
+      <h1>&lt;Wholesalers/&gt;</h1>
       <div class="profile">
-        <img src="wholeselar.jpg" alt="wholesaler 1" class="profile-avatar">
+        <img src="wholeselar.jpg" alt="wholesaler1" class="profile-avatar">
         <h2>Sagar Prasad</h2>
         <p>Company:  AgriTrade Hub</p>
         <p>Location: Buxar, Bihar</p>
         <p>Contact: xyz@gmail.com</p>
       </div>
       <div class="profile">
-        <img src="wholesaler1.jpg" alt="Wholesaler 1" class="profile-avatar">
+        <img src="wholesaler1.jpg" alt="Wholesaler2" class="profile-avatar">
+        <h2>Nishant Rai</h2>
+        <p>Company: DesiUdyog Wholesale </p>
+        <p>Location: Bhagwanpur, Bihar</p>
+        <p>Contact: yaduvanshi@gmail.com</p>
+      </div>
+      <div class="profile">
+        <img src="wholesaler1.jpg" alt="Wholesaler3" class="profile-avatar">
+        <h2>Nishant Rai</h2>
+        <p>Company: DesiUdyog Wholesale </p>
+        <p>Location: Bhagwanpur, Bihar</p>
+        <p>Contact: yaduvanshi@gmail.com</p>
+      </div>
+      <div class="profile">
+        <img src="wholesaler1.jpg" alt="Wholesaler4" class="profile-avatar">
         <h2>Nishant Rai</h2>
         <p>Company: DesiUdyog Wholesale </p>
         <p>Location: Bhagwanpur, Bihar</p>
