--- a/frontEnd/farmer.html
+++ b/frontEnd/farmer.html
@@ -13,13 +13,14 @@
     <div class="container">
       <div class="logo-container">
         <img src="logo1.jpg" alt="Harvest Hub" class="logo">
+        <div class="harv"><h1>HARVEST HUB</h1></div>
       </div>
       <ul class="nav-menu">
         <li><a href="homepg.html">Home</a></li>
         <li><a href="Aboutus.html">About Us</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="farmers.html">Farmers</a></li>
-        <li><a href="Wholesaler.html">Wholesaler</a></li>
+        <li><a href="Wholesaler.html">Wholesalers</a></li>
         <li><a href="Cont.html">Contact Us</a></li>
       </ul>
     </div>
@@ -28,7 +29,7 @@
   <!-- Farmers Section -->
   <section class="farmers">
     <div class="container">
-      <h1>Meet Our Farmers</h1>
+      <h1>&lt;Meet Our Farmers/&gt;</h1>
       <div class="farmer">
         <img src="farmer1.jpg" alt="Farmer 1" class="farmer-avatar">
         <h2>Mridul Kumar</h2>
@@ -39,6 +40,20 @@
       <div class="farmer">
         <img src="farmer2.jpg" alt="Farmer 2" class="farmer-avatar">
         <h2>Satvik Tiwari</h2>
+        <p>Farm: Prakrirti Kheti Kendra </p>
+        <p>Location: Kanpur, Uttar Pradesh</p>
+        <p>Contact: Tiwari@gmail.com</p>
+      </div>
+      <div class="farmer">
+        <img src="farmer2.jpg" alt="Farmer 3" class="farmer-avatar">
+        <h2>DOn't Know Tiwari</h2>
+        <p>Farm: Prakrirti Kheti Kendra </p>
+        <p>Location: Kanpur, Uttar Pradesh</p>
+        <p>Contact: Tiwari@gmail.com</p>
+      </div>
+      <div class="farmer">
+        <img src="farmer2.jpg" alt="Farmer 4" class="farmer-avatar">
+        <h2>Don Tiwari</h2>
         <p>Farm: Prakrirti Kheti Kendra </p>
         <p>Location: Kanpur, Uttar Pradesh</p>
         <p>Contact: Tiwari@gmail.com</p>
