--- a/frontEnd/homepg.html
+++ b/frontEnd/homepg.html
@@ -21,7 +21,7 @@
         <li><a href="Aboutus.html">About Us</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="farmer.html">Farmers</a></li>
-        <li><a href="Wholesaler.html">Wholesaler</a></li>
+        <li><a href="Wholesaler.html">Wholesalers</a></li>
         <li><a href="cont.html">Contact Us</a></li>
       </ul>
     </div>
