--- a/frontEnd/services.html
+++ b/frontEnd/services.html
@@ -13,13 +13,14 @@
         <div class="container">
           <div class="logo-container">
             <img src="logo1.jpg" alt="Harvest Hub" class="logo">
+            <div class="harv"><h1>HARVEST HUB</h1></div>
           </div>
           <ul class="nav-menu">
             <li><a href="homepg.html">Home</a></li>
             <li><a href="Aboutus.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="farmer.html">Farmers</a></li>
-            <li><a href="Wholesaler.html">wholesaler</a></li>
+            <li><a href="Wholesaler.html">Wholesalers</a></li>
             <li><a href="Cont.html">Contact Us</a></li>
           </ul>
         </div>
@@ -28,7 +29,7 @@
   <!-- Services Section -->
   <section class="services">
     <div class="container">
-      <h1>Our Services</h1>
+      <h1>&lt;Our Services/&gt;</h1>
       <div class="service">
         <h2>Farm Traceability</h2>
         <p>Track the journey of your food from the farm where it was grown.</p>
