--- a/frontEnd/services.html
+++ b/frontEnd/services.html
@@ -1,66 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Services - Harvest Hub</title>
-  <link rel="stylesheet" href="services.css">
-</head>
-<body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Services - Harvest Hub</title>
+    <link rel="stylesheet" href="services.css" />
+  </head>
+  <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <div class="container">
-          <div class="logo-container">
-            <img src="logo1.jpg" alt="Harvest Hub" class="logo">
-            <div class="harv"><h1>HARVEST HUB</h1></div>
-          </div>
-          <ul class="nav-menu">
-            <li><a href="homepg.html">Home</a></li>
-            <li><a href="Aboutus.html">About Us</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="farmer.html">Farmers</a></li>
-            <li><a href="Wholesaler.html">Wholesalers</a></li>
-            <li><a href="Cont.html">Contact Us</a></li>
-          </ul>
+      <div class="container">
+        <div class="logo-container">
+          <img src="logo1.jpg" alt="Harvest Hub" class="logo" />
+          <div class="harv"><h1>HARVEST HUB</h1></div>
         </div>
-      </nav>
+        <ul class="nav-menu">
+          <li><a href="homepg.html">Home</a></li>
+          <li><a href="Aboutus.html">About Us</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="farmer.html">Farmers</a></li>
+          <li><a href="Wholesaler.html">Wholesalers</a></li>
+          <li><a href="Cont.html">Contact Us</a></li>
+        </ul>
+      </div>
+    </nav>
 
-  <!-- Services Section -->
-  <section class="services">
-    <div class="container">
-      <h1>&lt;Our Services/&gt;</h1>
-      <div class="service">
-        <h2>Farm Traceability</h2>
-        <p>Track the journey of your food from the farm where it was grown.</p>
-      </div>
-      <div class="service">
-        <h2>Quality Assurance</h2>
-        <p>Ensuring high-quality produce through stringent quality control measures.</p>
-      </div>
-      <div class="service">
-        <h2>Sustainable Farming</h2>
-        <p>Supporting sustainable farming practices for a healthier planet.</p>
-      </div>
-    </div>
-  </section>
+    <!-- Services Section -->
 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-links">
-        <a href="#">Terms of Service</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">FAQ</a>
-      </div>
-      <div class="social-links">
-        <a href="#">Facebook</a>
-        <a href="#">Twitter</a>
-        <a href="#">Instagram</a>
-      </div>
-    </div>
-    <p class="copyright">&copy; 2024 Harvest Hub. All rights reserved.</p>
-  </footer>
+    <section class="services">
+        <div class="container">
+          <h1>&lt;Our Services/&gt;</h1>
+          <div class="content">
+    <section class="services">
+      <div class="container">
+        <h1></h1>
+        <div class="service">
+          <h2>Market Analysis and Pricing Assistance</h2>
+          <p>
+            Offering insights and analysis on market trends, pricing strategies,
+            and demand forecasts to help farmers optimize their bids.
+          </p>
+        </div>
+        <div class="service">
+          <h2>Quality Inspection Services</h2>
+          <p>
+            Conducting quality inspections and certifications to ensure that
+            products meet industry standards and buyer requirements.
+          </p>
+        </div>
+        <div class="service">
+          <h2>Organic Certification Assistance</h2>
+          <p>
+            Helping farmers obtain organic certifications to meet the growing
+            demand for organic products.
+          </p>
+        </div>
 
-</body>
+        <div class="service">
+          <h2>Market Access Support</h2>
+          <p>
+            Facilitating connections between farmers and markets, including
+            local restaurants, supermarkets, and farmer's markets.
+          </p>
+        </div>
+
+        <div class="service">
+          <h2>Bidding Platform Integration</h2>
+          <p>
+            Developing and maintaining a user-friendly online platform for
+            seamless bidding between farmers and wholesalers.
+          </p>
+        </div>
+
+        <div class="service">
+          <h2>Training and Education</h2>
+          <p>
+            Conducting training sessions and workshops to educate farmers on
+            effective bidding strategies, market dynamics, and best practices
+            for maximizing their earnings.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-links">
+          <a href="#">Terms of Service</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">FAQ</a>
+        </div>
+        <div class="social-links">
+          <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="#">Instagram</a>
+        </div>
+      </div>
+      <p class="copyright">&copy; 2024 Harvest Hub. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
