--- a/frontEnd/Wholesaler.html
+++ b/frontEnd/Wholesaler.html
@@ -46,19 +46,19 @@
       </div>
       <div class="profile">
         <img src="wholesaler1.jpg" alt="Wholesaler3" class="profile-avatar">
-        <h2>Nishant Rai</h2>
-        <p>Company: DesiUdyog Wholesale </p>
-        <p>Location: Bhagwanpur, Bihar</p>
-        <p>Contact: yaduvanshi@gmail.com</p>
+        <h2>Prateek Meena</h2>
+        <p>Company: R&Sons Hub </p>
+        <p>Location: Gorakhpur, UP</p>
+        <p>Contact: rdgvhi@gmail.com</p>
       </div>
       <div class="profile">
         <img src="wholesaler1.jpg" alt="Wholesaler4" class="profile-avatar">
-        <h2>Nishant Rai</h2>
+        <h2>Girish Kumar</h2>
         <p>Company: DesiUdyog Wholesale </p>
-        <p>Location: Bhagwanpur, Bihar</p>
-        <p>Contact: yaduvanshi@gmail.com</p>
+        <p>Location: Reva, MP</p>
+        <p>Contact:gfri@gmail.com</p>
       </div>
-      <!-- lge to add kr dena or profiles-->
+      
     </div>
   </section>
 
