--- a/frontEnd/farmer.html
+++ b/frontEnd/farmer.html
@@ -46,19 +46,19 @@
       </div>
       <div class="farmer">
         <img src="farmer2.jpg" alt="Farmer 3" class="farmer-avatar">
-        <h2>DOn't Know Tiwari</h2>
-        <p>Farm: Prakrirti Kheti Kendra </p>
-        <p>Location: Kanpur, Uttar Pradesh</p>
+        <h2>Ram Prakash</h2>
+        <p>Farm: Sudha Farm</p>
+        <p>Location: Mathura, Uttar Pradesh</p>
         <p>Contact: Tiwari@gmail.com</p>
       </div>
       <div class="farmer">
         <img src="farmer2.jpg" alt="Farmer 4" class="farmer-avatar">
-        <h2>Don Tiwari</h2>
-        <p>Farm: Prakrirti Kheti Kendra </p>
-        <p>Location: Kanpur, Uttar Pradesh</p>
-        <p>Contact: Tiwari@gmail.com</p>
+        <h2>Mukesh Prajapati</h2>
+        <p>Farm: Vatiya Udyog </p>
+        <p>Location: Hajipur, Bihar</p>
+        <p>Contact: grda@gmail.com</p>
       </div>
-      <!-- Anjali if you want to add more profiles then add kr denaa otherwise leave it !-->
+      
     </div>
   </section>
 
