survice footer fixed

--- a/frontEnd/Cont.html
+++ b/frontEnd/Cont.html
@@ -62,6 +62,7 @@
         <a href="#">Instagram</a>
       </div>
     </div>
+    <p class="copyright">&copy; 2024 Harvest Hub. All rights reserved.</p>
   </footer>
 
 </body>
