Update Aboutus.html changed!

--- a/frontEnd/Aboutus.html
+++ b/frontEnd/Aboutus.html
@@ -37,12 +37,12 @@
         <div>
         <p>
           At Harvest Hub, we are passionate about connecting farmers directly to
-          consumers, ensuring that you receive the freshest and highest quality
+          wholesaler, ensuring that you receive the freshest and highest quality
           produce while supporting local agriculture.
         </p>
         <p>
           Our journey began with a simple idea: to create a platform that brings
-          farmers and consumers closer together, eliminating unnecessary
+          farmers and wholesaler closer together, eliminating unnecessary
           middlemen and ensuring fair prices for both parties.
         </p>
 
@@ -55,7 +55,7 @@
         </p>
 
         <p>
-          Whether you're a farmer looking to sell your produce or a consumer
+          Whether you're a farmer looking to sell your produce or a wholesaler
           looking for fresh, locally sourced food, Harvest Hub is here for you.
           Join us in our mission to build a healthier and more sustainable food
           system for all.
