--- a/frontEnd/homepg.html
+++ b/frontEnd/homepg.html
@@ -1,116 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Harvest Hub - Farm to Table Traceability</title>
-  <link rel="stylesheet" href="homepg.css">
-</head>
-<body>
-
-  <!-- Navigation Bar -->
-  <nav class="navbar">
-    <div class="container">
-      <div class="logo-container">
-        <img src="Logo1.jpg" alt="HARVEST HUB" class="logo_img">
-        <div class="harv"><h1>HARVEST HUB</h1></div>
-    <!-- just fix the logo only !! -->
-    </div>
-      <ul class="nav-menu">
-        <li><a href="homepg.html">Home</a></li>
-        <li><a href="Aboutus.html">About Us</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="farmer.html">Farmers</a></li>
-        <li><a href="Wholesaler.html">Wholesalers</a></li>
-        <li><a href="cont.html">Contact Us</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="container">
-      <h1>Discover the Journey of Your Food</h1>
-      <p class="subtitle">From Farm to Your Table</p>
-      <a href="#" class="btn">Explore Our Services</a>
-    </div>
-  </section>
-
-  <!-- Why Choose Harvest Hub? -->
-  <section class="features">
-    <div class="container">
-      <h2>Why Choose Harvest Hub?</h2>
-      <div class="feature">
-        <h3>Farm Traceability</h3>
-        <p>Track the journey of your food from the farm where it was grown.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Harvest Hub - Farm to Table Traceability</title>
+    <link rel="stylesheet" href="homepg.css" />
+  </head>
+  <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo-container">
+          <img src="Logo1.jpg" alt="HARVEST HUB" class="logo_img" />
+          <div class="harv"><h1>HARVEST HUB</h1></div>
+          </div>
+        <ul class="nav-menu">
+          <li><a href="homepg.html">Home</a></li>
+          <li><a href="Aboutus.html">About Us</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="farmer.html">Farmers</a></li>
+          <li><a href="Wholesaler.html">Wholesalers</a></li>
+          <li><a href="cont.html">Contact Us</a></li>
+        </ul>
       </div>
-      <div class="feature">
-        <h3>Quality Assurance</h3>
-        <p>Ensuring high-quality produce through stringent quality control measures.</p>
-      </div>
-      <div class="feature">
-        <h3>Sustainable Farming</h3>
-        <p>Supporting sustainable farming practices for a healthier planet.</p>
-      </div>
-    </div>
-  </section>
+    </nav>
+            <div class="login-buttons">
+            <a href="login.html" class="login-button">Login</a>
+            <a href="sign.html" class="signup-button">Sign Up</a>
+          </div>
 
-  <!-- Meet Our Farmers -->
-  <section class="farmers">
-    <div class="container">
-      <h2>Meet Our Farmers</h2>
-      <div class="grid">
-        <!-- Farmer cards will be dynamically generated here -->
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="container">
+        <h1>Discover the Journey of Your Food</h1>
+        <p class="subtitle">From Farm to Your Table</p>
+        <a href="#" class="btn">Explore Our Services</a>
       </div>
-      <a href="#" class="btn">Learn More About Our Farmers</a>
-    </div>
-  </section>
+    </section>
 
-  <!-- Product Showcase -->
-  <section class="products">
-    <div class="container">
-      <h2>Shop the Harvest</h2>
-      <!-- Product carousel or grid will be dynamically generated here -->
-    </div>
-  </section>
-
-  <!-- Testimonials -->
-  <section class="testimonials">
-    <div class="container">
-      <h2>Testimonials</h2>
-      <div class="carousel">
-        <!-- Testimonial slides will be dynamically generated here -->
+    <!-- Why Choose Harvest Hub? -->
+    <section class="features">
+      <div class="container">
+        <h2>Why Choose Harvest Hub?</h2>
+        <div class="feature">
+          <h3>Farm Traceability</h3>
+          <p>
+            Track the journey of your food from the farm where it was grown.
+          </p>
+        </div>
+        <div class="feature">
+          <h3>Quality Assurance</h3>
+          <p>
+            Ensuring high-quality produce through stringent quality control
+            measures.
+          </p>
+        </div>
+        <div class="feature">
+          <h3>Sustainable Farming</h3>
+          <p>
+            Supporting sustainable farming practices for a healthier planet.
+          </p>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Newsletter Subscription -->
-  <section class="newsletter">
-    <div class="container">
-      <h2>Subscribe to Our Newsletter</h2>
-      <form action="#">
-        <input type="email" placeholder="Enter your email address">
-        <button type="submit">Subscribe</button>
-      </form>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-links">
-        <a href="#">Terms of Service</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">FAQ</a>
+    <!-- Meet Our Farmers -->
+    <section class="farmers">
+      <div class="container">
+        <h2>Meet Our Farmers</h2>
+        <div class="grid">
+          <!-- Farmer cards will be dynamically generated here -->
+        </div>
+        <a href="#" class="btn">Learn More About Our Farmers</a>
       </div>
-      <div class="social-links">
-        <a href="#">Facebook</a>
-        <a href="#">Twitter</a>
-        <a href="#">Instagram</a>
-      </div>
-    </div>
-    <p class="copyright">&copy; 2024 Harvest Hub. All rights reserved.</p>
-  </footer>
+    </section>
 
-</body>
+    <!-- Product Showcase -->
+    <section class="products">
+      <div class="container">
+        <h2>Shop the Harvest</h2>
+        <!-- Product carousel or grid will be dynamically generated here -->
+      </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="testimonials">
+      <div class="container">
+        <h2>Testimonials</h2>
+        <div class="carousel">
+          <!-- Testimonial slides will be dynamically generated here -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Newsletter Subscription -->
+    <section class="newsletter">
+      <div class="container">
+        <h2>Subscribe to Our Newsletter</h2>
+        <form action="#">
+          <input type="email" placeholder="Enter your email address" />
+          <button type="submit">Subscribe</button>
+        </form>
+      </div>
+    </section>
+   
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-links">
+          <a href="#">Terms of Service</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">FAQ</a>
+        </div>
+        <div class="social-links">
+          <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="#">Instagram</a>
+        </div>
+      </div>
+      <p class="copyright">&copy; 2024 Harvest Hub. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
