--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="Login.css">
     <title>Login</title>
 </head>
-
 <body>
     <div class="login-box">
         <h2>Login</h2>
@@ -15,8 +14,8 @@
             <div class="select-box">
                 <select id="user-type" name="user-type" required>
                     <option value="">Select User Type</option>
-                    <option value="student">Wholesaler</option>
-                    <option value="teacher">Faermer</option>
+                    <option value="student">Consumer</option>
+                    <option value="teacher">Wholesaler</option>
                 </select>
             </div>
             <div class="user-box">
@@ -29,16 +28,12 @@
             <a href="forgot.html" class="forgot-password">Forgot Password?</a>
             <br><br>
             <div class="user-box">
-                
-                <a href="#" class="new-user-text" id="new-user-text">New user?</a>
-                <a href="#" class="new-user-text" id="new-user-text">Sign up</a>
-            </div>
+                <span class="new-user-text" id="new-user-text">New user?</span>
 
+                <a href="Signup.html" class="new-user-text" id="Sign">Sign up</a>
+            </div>
         </form>
     </div>
-
-
-
 </body>
 
 </html>
