--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -14,8 +14,8 @@
             <div class="select-box">
                 <select id="user-type" name="user-type" required>
                     <option value="">Select User Type</option>
-                    <option value="student">Consumer</option>
-                    <option value="teacher">Wholesaler</option>
+                    <option value="Farmer">Farmer</option>
+                    <option value="Wholesaler">Wholesaler</option>
                 </select>
             </div>
             <div class="user-box">
@@ -30,7 +30,7 @@
             <div class="user-box">
                 <span class="new-user-text" id="new-user-text">New user?</span>
 
-                <a href="Signup.html" class="new-user-text" id="Sign">Sign up</a>
+                <a href="sign.html" class="new-user-text" id="Sign">Sign up</a>
             </div>
         </form>
     </div>
